[project]
name = "ComfyUI-NuoAnAI"
description = "NuoAnAI API node supports models: Flux-Pro-1.1 (¥ 0.03), Flux-Ultra-1.1 (¥ 0.04), Flux Kontext Pro (¥ 0.035), Flux Kontext Max (¥ 0.07), GPT Image (¥ 0.02). Support text generated images, image generated images, and multi image fusion."
version = "1.0.3"
license = { file = "LICENSE" }
dependencies = [
    "requests",
    "python-dotenv",
    "httpx",
    "httpcore"
]

[project.urls]
Repository = "https://github.com/31702160136/ComfyUI-NuoAnAI"

[tool.comfy]
PublisherId = "Tom"
DisplayName = "NuoAnAI api in ComfyUI"
Icon = "https://raw.githubusercontent.com/31702160136/ComfyUI-NuoAnAI/main/images/text-to-image-demo.png" 